[tool.poetry]
name = "nonebot-plugin-ncm"
version = "1.3.0"
description = "基于go-cqhttp与nonebot2的 网易云 无损音乐下载"
authors = ["kitUIN <kulujun@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b1"
tinydb = "^4.7.0"
pyncm ="^1.6.5.2"
aiofile ="^3.7.4"
nonebot-adapter-onebot = "^2.0.0b1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
