[tool.poetry]
name = "nonebot-plugin-ncm"
version = "1.6.17"
description = "基于go-cqhttp与nonebot2的 网易云 无损音乐下载"
license = "Apache License 2.0"
authors = ["kitUIN <kulujun@gmail.com>"]
maintainers = ["kitUIN <kulujun@gmail.com>", "Kurokitu"]
readme = "README.md"
packages = [
    { include = "nonebot-plugin-ncm" }
]
homepage = "https://github.com/kitUIN/nonebot-plugin-ncm"
repository = "https://github.com/kitUIN/nonebot-plugin-ncm"
keywords = ["netease-cloud-music", "netease", "go-cqhttp", "nonebot2"]
[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc2"
tinydb = ">=4.7.0"
pyncm =">=1.7.1"
aiofile ="^3.8.7"
nonebot-adapter-onebot = ">=2.1.5"
qrcode = "^7.3.1"
httpx = ">=0.24.1"
Pillow = ">=9.3.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
